- Fixed issue where opacity was not changing - Toggle buttons styling

--- a/TwoOkNotes/App.xaml
+++ b/TwoOkNotes/App.xaml
@@ -12,6 +12,7 @@
                 <ResourceDictionary Source="Assets/Themes/LauncherButtonTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/LauncherComboBoxTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/ColorPickerRadioButtonTheme.xaml"/>
+                <ResourceDictionary Source="Assets/Themes/PenSettingsToggleButtonTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
