- Pen settings style changes

--- a/TwoOkNotes/App.xaml
+++ b/TwoOkNotes/App.xaml
@@ -3,16 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TwoOkNotes" 
              xmlns:converters="clr-namespace:TwoOkNotes.Util"
-             xmlns:metro="clr-namespace:MahApps.Metro;assembly=MahApps.Metro"
+             xmlns:metro="clr-namespace:MahApps.Metro;assembly=MahApps.Metro" 
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <converters:BooleanToCollapsedConverter x:Key="BooleanToCollapsedConverter" />
+            <converters:ColorToBrushConverter x:Key="ColorToBrushConverter"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Assets/Themes/LauncherButtonTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/LauncherComboBoxTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/ColorPickerRadioButtonTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/PenSettingsToggleButtonTheme.xaml"/>
+                <ResourceDictionary Source="Assets/Themes/SliderTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
