--- a/TwoOkNotes/App.xaml
+++ b/TwoOkNotes/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="Assets/Themes/PenSettingsToggleButtonTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/SliderTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/CreatedPensRadioButtonTheme.xaml"/>
+                <ResourceDictionary Source="Assets/Themes/ColorPickerRadioButtonTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
